@@ -46,26 +46,89 @@ JavaDoc for all the APIs:
 
 [https://javadoc.io/doc/org.mozilla/rhino](https://javadoc.io/doc/org.mozilla/rhino)
 
+## Code Structure
+
+Rhino 1.7.15 and before were primarily used in a single JAR called "rhino.jar".
+
+Newer releases now organize the code using Java modules. There are four primary modules:
+
+* **rhino**: The primary codebase necessary and sufficient to run JavaScript code. Required by everything that uses Rhino. In releases *after* 1.7.15, this module does not contain the "tools" or the XML implementation.
+* **rhino-tools**: Contains the shell, debugger, and the "Global" object, which many tests and other Rhino-based tools use. Note that adding Global gives Rhino the ability to print to stdout, open files, and do other things that may be considered dangerous in a sensitive environment, so it only makes sense to include if you will use it.
+* **rhino-xml**: Adds the implementation of the E4X XML standard. Only required if you are using that.
+* **rhino-engine**: Adds the Rhino implementation of the standard Java *ScriptEngine* interface. Some projects use this to be able to switch between script execution engines, but for anything even moderately complex it is almost always easier and always more flexible to use Rhino's API directly.
+
+The release contains the following other modules, which are used while building and 
+testing but which are not published to Maven Central:
+
+* **rhino-all**: This creates an "all-in-one" JAR that includes *rhino-runtime*, *rhino-tools*, and *rhino-xml*. This is what's used if you want to run Rhino using "java jar".
+* **tests**: The tests that depend on all of Rhino and also the external tests, including the Mozilla legacy test scripts and the test262 tests.
+* **benchmarks**: Runs benchmarks using JMH.
+* **examples**: Surprisingly, this contains example code.
+
 ## Building
+
+### Requirements
+
+Rhino requires Java 17 or higher to build. The "spotless" tool, which enforces code formatting, will not
+run on older Java versions and you will receive a warning. If in doubt, Java 21 works great.
+
+Rhino runs on Java 11 and higher. The build tools use the "--release" flag to ensure that only
+features from Java 11 are used in the product.
+
+The CI tools run the Rhino tests on Java 11, 17, and 21. Regardless of what version of Java you are
+building with, you can test on another Java version using the RHINO_TEST_JAVA_VERSION environment variable.
 
 ### How to Build
 
-Rhino builds with `Gradle`. Here are some useful tasks:
-```
-./gradlew jar
-```
-Build and create `Rhino` jar in the `buildGradle/libs` directory.
-```
-git submodule init
-git submodule update
-./gradlew test
-```
-Build and run all the tests, including the official [ECMAScript Test Suite](https://github.com/tc39/test262).
-See [Running tests](testsrc/README.md) for more detailed info about running tests.
-```
-./gradlew testBenchmark
-```
-Build and run benchmark tests.
+For normal development, you can build the code, run the static checks, and run all the tests like this:
+
+    git submodule init
+    git submodule update
+    ./gradlew check
+
+To just run the Rhino shell, you can do this from the top-level directory:
+
+    ./gradlew run -q --console=plain
+
+Alternately, you can build an all-in-one JAR and run that:
+
+    ./gradlew :rhino-all:build
+    java -jar rhino-all/build/libs/rhino-all-1.7.16-SNAPSHOT.jar
+
+You can also run the benchmarks:
+
+    ./gradlew jmh
+
+### Testing on other Java Versions
+
+It is a good idea to test major changes on Java 11 before assuming that they will pass the CI
+tests. To do this, set the environment variable RHINO_TEST_JAVA_VERSION to the version that you
+want to test. For example:
+
+    RHINO_TEST_JAVA_VERSION=11 ./gradlew check
+
+This will only work if Gradle can find a JDK of the appropriate version. You can troubleshoot
+this using the command:
+
+    ./gradlew -q javaToolchains
+
+Not all installers seem to put JDKs in the places where Gradle can find them. When in doubt,
+installatioons from [Adoptium](https://adoptium.net) seem to work on most platforms.
+
+### Code Coverage
+
+The "Jacoco" coverage is enabled by default for the main published modules as well as the special 
+"tests" module. Coverage is generated for each of the main projects separately and available by
+running
+
+    ./gradlew jacocoTestReport
+
+To see an aggregated coverage report for everything, which is probably what you want, run
+
+    ./gradlew testCodeCoverageReport
+
+The result is in:
+    ./tests/build/reports/jacoco/testCodeCoverageReport/html
 
 ## Releasing and publishing new version
 
@@ -86,29 +149,18 @@ mavenReleaseRepo=
 5. Increase version and add `-SNAPSHOT` to it in `gradle.properties` in project root folder.
 6. Push `gradle.properties` to `GitHub`
 
-## Running
-
-Rhino can run as a stand-alone interpreter from the command line:
-```
-java -jar buildGradle/libs/rhino-1.7.12.jar -debug -version 200
-Rhino 1.7.9 2018 03 15
-js> print('Hello, World!');
-Hello, World!
-js>
-```
-There is also a "rhino" package for many Linux distributions as well as Homebrew for the Mac.
-
-You can also embed it, as most people do. See below for more docs.
-
 ### Java 16 and later
 
 If you are using a modular JDK that disallows the reflective access to
-non-public fields (16 and later), you may need to configure the JVM with the
+non-public fields (16 and later), you *may* need to configure the JVM with the
 [`--add-opens`](https://docs.oracle.com/en/java/javase/17/migrate/migrating-jdk-8-later-jdk-releases.html#GUID-12F945EB-71D6-46AF-8C3D-D354FD0B1781)
 option to authorize the packages that your scripts shall use, for example:
 ```
 --add-opens java.desktop/javax.swing.table=ALL-UNNAMED
 ```
+
+This is not necessary just to build or test Rhino -- it may be necessary when embedding it
+depending on what your project does.
 
 ## Issues
 
@@ -132,6 +184,14 @@ if you can un-disable some tests.
 some time to get back to you.
 * Thank you for contributing!
 
+## Updating Test262 tests
+
+If you are adding new capabilities to Rhino, you may be making more test262 tests pass, which is
+a good thing. Please [see the instructions](./tests/testsrc/README.md) on how to update our test262 configuration.
+
+Because of differences between Java and JavaScript, when testing on newer Java versions, many
+Unicode-related test262 tests appear to pass, but they will fail on Java 11. Please ignore these!
+
 ### Code Formatting
 
 Code formatting was introduced in 2021. The "spotless" plugin will fail your
@@ -143,22 +203,10 @@ hundreds of lines of changes to, please try to put the reformatting changes
 alone into a single Git commit so that we can separate reformatting changes
 from more substantive changes.
 
-> **Warning:** If you build with Java 16 or later, you need to apply a
-> workaround for a "spotless" issue. Otherwise, the task will be disabled
-> and your PR may fail.
-> 
-> The following must be added to your `gradle.properties`.
-> ```
-> org.gradle.jvmargs=--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
->  --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
->  --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
->  --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
->  --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
-> ```
-> For more details, see https://github.com/diffplug/spotless/issues/834#issuecomment-819118761
+Currently, you must be building on Java 17 or higher for Spotless to run.
 
 ## More Help
 
-The Google group is the best place to go with questions:
+GitHub is the best place to go with questions. For example, we use "GitHub discussions":
 
-[https://groups.google.com/forum/#!forum/mozilla-rhino](https://groups.google.com/forum/#!forum/mozilla-rhino)
+[https://github.com/mozilla/rhino/discussions](https://github.com/mozilla/rhino/discussions)
